
//James Friedenberg 3/7/2016 10:56am
	-Loaded title screen into game and got it hooked up to the menu game state
	-Spacebar changes state from menu to walk
	-Removed unneeded code and img files from the project

//Juri Kiin 3/8/16 11:50 PM
	- Added code to switch into combat mode to test (until enemies are in the level)
	- Added major framework for blocking system.
	- Loaded in arrow textures and added them to a list.

//Dustin Knowlton 3/9/16 4:20 PM
	- Blaze it
	- Camera fully added, except for actual map draw statement (in but not correct, commented out)


//Juri Kiin  3/9/16 4:51 PM
	- Worked on the attack combat.
	- Added a dictionary for future level management.

//James Friedenberg 3/9/2016 5:46pm
	-kek
	-Added edited version of the item, battle, and basic UIs
	-Added broken if statements to allow the user to switch between menus while paused

//Juri Kiin 3/14/16 10:43 AM
	- Changed the gamestates to add for the UI menu's
	- Fixed the UI so it all works nice (Button non functioning.)

// Andrew and Dustin 6:09 PM 
	- Player now animates and moves! 
	- Test map and enemy added, they work. No collision with enemy yet. 
	- UI draw moved, however commented out the draw for the in game UI because you cant see map with it present.

//James Friedenberg 6:40pm
	- Edited basic UI to be transparent and display player hp
	- Added consumable potion code
	- Added stat numbers to the stats menu
	- Added a boost variable to the player class

//Dustin Knowlton 7:17pm
	-few small adjustments to the move class, failed to fix enemy collision.


//Juri Kiin 3:07 PM
	- Created the Enemy Creation tool that allows the user to input stats for the enemy, and it creates a binary file with those stats stored.
	- Added a ReadFiles() method that loads in the data from the binary files, and created an enemy object with that data.

//Juri Kiin 10:42 AM
	- Fixed the external tool so it works properly